# xem-module-clients

./: README.md  pyproject.toml
.github/workflows/: module-ci.yml
src/xem_module_clients/: __init__.py  handlers.py  manifest.py  routes.py
tests/: test_manifest_contract.py  test_package_entrypoint.py
